fix(material/core): improve disabled psuedo checkbox contrast (#31464)
* fix(material/core): improve disabled psuedo checkbox contrast

* refactor: lint

---------

--- a/src/material/core/selection/pseudo-checkbox/_m2-pseudo-checkbox.scss
+++ b/src/material/core/selection/pseudo-checkbox/_m2-pseudo-checkbox.scss
@@ -1,6 +1,4 @@
-@use '../../theming/inspection';
 @use 'sass:map';
-@use 'sass:meta';
 @use '../../tokens/m2-utils';
 @use '../../tokens/m3-utils';
 
@@ -15,12 +13,6 @@
 
 // Tokens that can be configured through Angular Material's color theming API.
 @function private-get-color-palette-color-tokens($theme, $color-variant) {
-  // TODO: Use system colors instead of checking theme type
-  $is-dark: false;
-  @if (meta.type-of($theme) == map and map.get($theme, color)) {
-    $is-dark: inspection.get-theme-type($theme) == dark;
-  }
-  $disabled-color: if($is-dark, #686868, #b0b0b0);
   $system: m2-utils.get-system($theme);
   $system: m3-utils.replace-colors-with-variant($system, secondary, $color-variant);
 
@@ -29,9 +21,12 @@
     pseudo-checkbox-full-selected-checkmark-color: map.get($system, background),
     pseudo-checkbox-full-unselected-icon-color: map.get($system, on-surface-variant),
     pseudo-checkbox-full-disabled-selected-checkmark-color: map.get($system, background),
-    pseudo-checkbox-full-disabled-unselected-icon-color: $disabled-color,
-    pseudo-checkbox-full-disabled-selected-icon-color: $disabled-color,
+    pseudo-checkbox-full-disabled-unselected-icon-color:
+        m3-utils.color-with-opacity(map.get($system, on-surface), 38%),
+    pseudo-checkbox-full-disabled-selected-icon-color:
+        m3-utils.color-with-opacity(map.get($system, on-surface), 38%),
     pseudo-checkbox-minimal-selected-checkmark-color: map.get($system, secondary),
-    pseudo-checkbox-minimal-disabled-selected-checkmark-color: $disabled-color,
+    pseudo-checkbox-minimal-disabled-selected-checkmark-color:
+        m3-utils.color-with-opacity(map.get($system, on-surface), 38%),
   );
 }
